--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,13 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+@layer base {
+  h1 {
+    font-size: larger;
+    font-weight: 500;
+  }
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
